erDiagram
    %% Fingerprint — generated by php artisan erd:generate

    fingerprints {
        bigint id PK
        bigint booking_id FK
        date deadline
        decimal cost
        decimal profit
        bigint assigned_staff_id FK
        timestamp created_at
        timestamp updated_at
    }

    fingerprint_details {
        bigint id PK
        bigint fingerprint_id FK
        bigint passenger_id FK
        string status
        timestamp created_at
        timestamp updated_at
    }

    rescheduled_fingerprints {
        bigint id PK
        bigint fingerprint_detail_id FK
        string reason
        string other_reason
        string remarks
        date next_date
        int occurrence
        timestamp created_at
        timestamp updated_at
    }

    fingerprint_cost_logs {
        bigint id PK
        bigint fingerprint_id FK
        decimal cost
        bigint cost_updated_by FK
        timestamp created_at
        timestamp updated_at
    }

    fingerprint_detail_logs {
        bigint id PK
        bigint fingerprint_detail_id FK
        bigint user_id FK
        string action
        string old_values
        string new_values
        timestamp created_at
    }

    %% Relationships
    fingerprint_details ||--|{ fingerprint_detail_logs : fingerprint_detail_id
    fingerprint_details ||--|{ rescheduled_fingerprints : fingerprint_detail_id
    fingerprints ||--|{ fingerprint_cost_logs : fingerprint_id
    fingerprints ||--|{ fingerprint_details : fingerprint_id

